using env .file

--- a/add_usluga_v13.ipynb
+++ b/add_usluga_v13.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1c07c439-8396-4a8d-b38a-9e334406c6fd",
    "metadata": {
     "tags": []
@@ -131,8 +131,8 @@
     "def login():\n",
     "    print(\"Logining\")\n",
     "    headers = {\n",
-    "            \"Login\": \"GIBBot1\",\n",
-    "            \"Password\": \"Qwerty1!\"\n",
+    "            \"Login\": os.getenv('ECP_USERNAME_1'),\n",
+    "            \"Password\": os.getenv('ECP_PASSWORD_1')\n",
     "    }\n",
     "    response=session.request(\"GET\", f\"{baseurl}/api/user/login\", headers=headers).json()\n",
     "    save_cookies\n",
