--- a/closeDirs.ipynb
+++ b/closeDirs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0c915059-049c-4131-9041-16f6e7d43366",
    "metadata": {},
    "outputs": [
@@ -20,11 +20,10 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "from datetime import date, timedelta, datetime\n",
-    "\n",
     "baseurl=\"https://ecp.mis66.ru\"\n",
     "cookie_file=Path(\"cookies.txt\")\n",
-    "users=[{'name':'Admin','username':'GIBBot1', 'password':'Qwerty1!'},\n",
-    "      {'name':'Plenkin','username':'GIBPlenkin2', 'password':'GIBPlenkin217','LpuSection':'99560017798','MedStaffFact':'62646','EMDCertificate_id':'22132'}]\n",
+    "users=[{'name':'Admin','username':os.getenv('ECP_USERNAME_1'), 'password':os.getenv('ECP_PASSWORD_1')},\n",
+    "      {'name':'User','username':os.getenv('ECP_USERNAME_4'), 'password':os.getenv('ECP_PASSWORD_4'),'LpuSection':'99560017798','MedStaffFact':'62646','EMDCertificate_id':'22132'}]\n",
     "current_user=users[0]\n",
     "\n",
     "def login(username,password):\n",
@@ -80,13 +79,11 @@
     "    response = session.request(\"POST\", baseurl+\"/?c=Queue&m=cancelQueueRecord\", params=payload)#.json()\n",
     "    return response\n",
     "    \n",
-    "# Данные о человеке по person_id\n",
     "def get_person_by_id(person_id):\n",
     "    url = baseurl+\"/api/Person\"\n",
     "    response = session.request(\"GET\", url, params={\"Person_id\": person_id})\n",
     "    return response.json()\n",
     "\n",
-    "# Запросить все трупы за 2025год\n",
     "def get_dead_patients(date_from, date_to):\n",
     "    url=baseurl+'/?c=Search&m=searchData'\n",
     "    payload = {'PersonPeriodicType_id':1,\n",
@@ -111,7 +108,6 @@
     "    try:\n",
     "        url=baseurl+'/?c=Template&m=getEvnFormPersonSvidInfo'\n",
     "        payload = {'user_MedStaffFact_id':user_doctor_id,\n",
-    "                   # 'from':'swPersonEmkWindow%20%E2%86%92%20openEmkEditWindow',\n",
     "                   'Evn_id':person_id,\n",
     "                   'object':'PersonSvidInfo',\n",
     "                   'object_id':'Person_id',\n",
@@ -238,11 +234,8 @@
     "        print(f\"Error converting list of dictionaries to ODS: {e}\")\n",
     "        return False\n",
     "\n",
-    "\n",
-    "\n",
     "session = requests.session()\n",
-    "login(current_user['username'], current_user['password'])\n",
-    "\n"
+    "login(current_user['username'], current_user['password'])"
    ]
   },
   {
@@ -67385,9 +67378,9 @@
       "Адрес проживания и прописки : г. Нижний Тагил, ул Сортировочная, д 1Б\n",
       "Дата поступления: 16.04.25  10:13  Дата смерти 23.04.25 05:30 \n",
       "\n",
-      "Основное заболевание: В-20 инфекция, стадия 4В, прогрессирование на фоне низкой приверженности к АРВТ (CD4 76 кл. от 28/02/2025, ВН 134000 коп. от 05/03/2025)\u000b",
-      "Осложнение основного заболевания: ВИЧ-ассоцированная прогрессирующая мультифокальная энцефалопатия. Гиперкинетический синдром. Мозжечковая дизартрия. Вестибуло-атактический синдром.   Кандидоз слизистых оболочек полости рта. Внебольничная двусторонняя полисегментрная пневмония тяжелая, вызванная Str.pneumoniae, ДН 2 ст.\u000b",
-      "Сопутствует: Хронический гепатит С минимальной степени активности. Бронхоэктазы S5 правого легкого. Киста верхней левой подчелюстной пазухи. Простой миопический астигматизм OU. Спазм аккомодации.\u000b",
+      "Основное заболевание: В-20 инфекция, стадия 4В, прогрессирование на фоне низкой приверженности к АРВТ (CD4 76 кл. от 28/02/2025, ВН 134000 коп. от 05/03/2025)\u000b\n",
+      "Осложнение основного заболевания: ВИЧ-ассоцированная прогрессирующая мультифокальная энцефалопатия. Гиперкинетический синдром. Мозжечковая дизартрия. Вестибуло-атактический синдром.   Кандидоз слизистых оболочек полости рта. Внебольничная двусторонняя полисегментрная пневмония тяжелая, вызванная Str.pneumoniae, ДН 2 ст.\u000b\n",
+      "Сопутствует: Хронический гепатит С минимальной степени активности. Бронхоэктазы S5 правого легкого. Киста верхней левой подчелюстной пазухи. Простой миопический астигматизм OU. Спазм аккомодации.\u000b\n",
       " \n",
       "An.morbi: ВИЧ-инфекция с 2013 года. Низкая приверженность к АРВТ. Кашель длительно. С 02/04/2025 заторможенность. В динамике тремор эпизодически, нарушение зрения, заторможенность сильнее, когнитивные нарушения, нарушения походки и речи.03/04/2025 обращение в ГБ №4. КТ ГМ, осмотр невролога - данных за ОНМК нет. КТ ОГК бронхиолит, дифференцировать с tbs. По КТ ОГК рез-там не обследованы. 04/04/2025 МРТ ГМ - вероятнее прогрессирующая мультифокальная энцефалопатия. С 10/04/2025 возобновление АРВТ. 14/04/2025 осмотр невролога - ВИЧ-энцефалопатия.Обращение в П/О ГАУЗ СО ГИБ 16/04/2025. Госпитализирован в 3 инфекционное отделение. 23.04.25 05:00 вызов медсестрой дежурного врача - отсутствие дыхания, пульса, сознания. Вызов реаниматолога. 05:30 — констатирована биологическая смерть. \n",
       "\n",
@@ -69139,9 +69132,9 @@
       "Форма   оказания   медицинской   помощи:  экстренная\n",
       "\n",
       "Основное заболевание: Хроническая ревматическая болезнь сердца. \n",
-      "Фон: В-20 инфекция, стадия 4А, прогрессирование при низкой приверженности АРВТ(ИБ+ от 2019г, СД 4 561 от 09/24г, ВН 20коп/мл от 01/25г. Алкогольная болезнь\u000b",
+      "Фон: В-20 инфекция, стадия 4А, прогрессирование при низкой приверженности АРВТ(ИБ+ от 2019г, СД 4 561 от 09/24г, ВН 20коп/мл от 01/25г. Алкогольная болезнь\u000b\n",
       "Осложнение основного заболевания: Внебольничная двусторонняя бисегментарная пневмония, неуточненной этиологии, нетяжелая. ДН 0. \n",
-      "Недостаточность МК II-III ст. Относительная недостаточность трискупидального клапана. Вторичный инфекционный эндокардит, экссудативный перикардит в анамнезе. Легочная гипертензия II степ. Кардиомегалия. ХСН 1 стадии/ ШШ AR c СhycФВ (45%) NYHA.\u000b",
+      "Недостаточность МК II-III ст. Относительная недостаточность трискупидального клапана. Вторичный инфекционный эндокардит, экссудативный перикардит в анамнезе. Легочная гипертензия II степ. Кардиомегалия. ХСН 1 стадии/ ШШ AR c СhycФВ (45%) NYHA.\u000b\n",
       "Сопутствует: Табакокурение/никотиновая зависимость. НРС. \n",
       "\n",
       "\n",
