--- a/ecp_bot_launcher.ipynb
+++ b/ecp_bot_launcher.ipynb
@@ -10,17 +10,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Exception in Tkinter callback\n",
+      "2025-11-01 14:00:43,643 [INFO]: Запускаю бот ecp_bot.py #1 на дату 01.11.2025.\n",
+      "Exception in thread Thread-4 (launch_bot):\n",
       "Traceback (most recent call last):\n",
-      "  File \"D:\\Anaconda\\Lib\\tkinter\\__init__.py\", line 1968, in __call__\n",
-      "    return self.func(*args)\n",
-      "           ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_16832\\126104471.py\", line 76, in select_bot\n",
-      "    item = tree.selection()[0]\n",
-      "           ~~~~~~~~~~~~~~~~^^^\n",
-      "IndexError: tuple index out of range\n",
-      "2025-10-30 13:36:30,829 [INFO]: Запускаю бот ecp_bot.py #1 на дату 03.10.2025.\n",
-      "2025-10-30 13:37:12,324 [INFO]: Запускаю бот ecp_bot.py #2 на дату 06.10.2025.\n"
+      "  File \"c:\\Python312\\Lib\\threading.py\", line 1073, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"c:\\Python312\\Lib\\threading.py\", line 1010, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_17856\\3163211443.py\", line 47, in launch_bot\n",
+      "  File \"C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_17856\\3163211443.py\", line 52, in update_logs_from_process\n",
+      "  File \"c:\\Python312\\Lib\\encodings\\cp1251.py\", line 23, in decode\n",
+      "    return codecs.charmap_decode(input,self.errors,decoding_table)[0]\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "UnicodeDecodeError: 'charmap' codec can't decode byte 0x98 in position 125: character maps to <undefined>\n"
      ]
     }
    ],
@@ -35,8 +37,6 @@
     "import queue\n",
     "import logging\n",
     "import sys\n",
-    "import os\n",
-    "from datetime import datetime\n",
     "import ctypes\n",
     "\n",
     "def remove_bot():\n",
@@ -70,10 +70,14 @@
     "        \"\"\"\n",
     "    ]\n",
     "    logger.info(f\"Запускаю бот {script_name} #{bot_id} на дату {start_date}.\")\n",
-    "    process = subprocess.Popen(cmd, stdout=subprocess.PIPE, stderr=subprocess.STDOUT, universal_newlines=True)\n",
-    "    # stdout, stderr = process.communicate()\n",
+    "    process = subprocess.Popen(cmd, \n",
+    "                               stdout=subprocess.PIPE, \n",
+    "                               stderr=subprocess.STDOUT, \n",
+    "                               universal_newlines=True,\n",
+    "                               encoding='utf-8',  # Explicitly set encoding\n",
+    "                               errors='replace',   # Replace invalid characters instead of crashing\n",
+    "                               )\n",
     "    tree.insert(\"\", \"end\", values=(bot_id, start_date, \"Работает\"))\n",
-    "    # ctypes.windll.user32.MessageBeep(ctypes.windll.user32.MB_ICONEXCLAMATION)\n",
     "    ctypes.windll.user32.MessageBeep(-1)\n",
     "    update_logs_from_process(process, bot_id)\n",
     "\n",
@@ -191,17 +195,11 @@
     "root.columnconfigure(0, weight=1)\n",
     "\n",
     "log_queue = queue.Queue()\n",
-    "\n",
     "bots_logs = {}  # Формат: {bot_id: [логи]}\n",
-    "\n",
     "current_selected_bot_id = None\n",
-    "\n",
     "btn_launch.config(command=on_launch_click)\n",
-    "\n",
     "tree.bind(\"<ButtonRelease-1>\", select_bot)\n",
-    "\n",
     "poll_log_queue()\n",
-    "\n",
     "root.mainloop()"
    ]
   },
@@ -215,63 +213,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-30 13:38:23,647 [INFO]: Запускаю бот ecp_bot.py #1 на дату 13.10.2025.\n",
-      "2025-10-30 13:38:41,909 [INFO]: Запускаю бот ecp_bot.py #2 на дату 13.10.2025.\n",
-      "2025-10-30 13:38:47,200 [INFO]: Запускаю бот ecp_bot.py #3 на дату 13.10.2025.\n",
-      "2025-10-30 13:39:09,292 [INFO]: Запускаю бот ecp_bot.py #4 на дату 20.10.2025.\n",
-      "2025-10-30 13:39:32,794 [INFO]: Запускаю бот ecp_bot.py #5 на дату 27.10.2025.\n",
-      "2025-10-30 15:49:13,128 [INFO]: Запускаю бот ecp_bot.py #4 на дату 03.10.2025.\n",
-      "2025-10-30 15:50:03,076 [INFO]: Запускаю бот ecp_bot.py #1 на дату 22.10.2025.\n",
-      "Exception in thread Thread-7 (launch_bot):\n",
-      "Traceback (most recent call last):\n",
-      "  File \"D:\\Anaconda\\Lib\\threading.py\", line 1073, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"D:\\Anaconda\\Lib\\site-packages\\ipykernel\\ipkernel.py\", line 772, in run_closure\n",
-      "    _threading_Thread_run(self)\n",
-      "  File \"D:\\Anaconda\\Lib\\threading.py\", line 1010, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_26308\\2491991929.py\", line 51, in launch_bot\n",
-      "  File \"C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_26308\\2491991929.py\", line 74, in update_logs_from_process\n",
-      "KeyError: 5\n",
-      "2025-10-30 16:14:03,599 [INFO]: Запускаю бот ecp_bot.py #5 на дату 13.10.2025.\n",
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"D:\\Anaconda\\Lib\\tkinter\\__init__.py\", line 1968, in __call__\n",
-      "    return self.func(*args)\n",
-      "           ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_26308\\2491991929.py\", line 88, in select_bot\n",
-      "    item = tree.selection()[0]\n",
-      "           ~~~~~~~~~~~~~~~~^^^\n",
-      "IndexError: tuple index out of range\n",
-      "2025-10-30 16:16:01,964 [INFO]: Запускаю бот ecp_bot.py #5 на дату 13.10.2025.\n",
-      "2025-10-31 08:56:44,897 [INFO]: Запускаю бот ecp_bot.py #1 на дату 30.10.2025.\n",
-      "2025-10-31 08:58:30,647 [INFO]: Запускаю бот ecp_bot.py #2 на дату 23.10.2025.\n",
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"D:\\Anaconda\\Lib\\tkinter\\__init__.py\", line 1968, in __call__\n",
-      "    return self.func(*args)\n",
-      "           ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_26308\\2491991929.py\", line 88, in select_bot\n",
-      "    item = tree.selection()[0]\n",
-      "           ~~~~~~~~~~~~~~~~^^^\n",
-      "IndexError: tuple index out of range\n",
-      "2025-10-31 09:04:02,868 [INFO]: Запускаю бот ecp_bot.py #3 на дату 12.10.2025.\n",
-      "2025-10-31 09:05:29,376 [INFO]: Запускаю бот ecp_bot.py #4 на дату 07.10.2025.\n",
-      "2025-10-31 09:06:35,323 [INFO]: Запускаю бот ecp_bot.py #5 на дату 04.10.2025.\n",
-      "2025-10-31 09:49:30,731 [INFO]: Запускаю бот ecp_bot.py #3 на дату 10.10.2025.\n",
-      "Exception in thread Thread-15 (launch_bot):\n",
-      "Traceback (most recent call last):\n",
-      "  File \"D:\\Anaconda\\Lib\\threading.py\", line 1073, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"D:\\Anaconda\\Lib\\site-packages\\ipykernel\\ipkernel.py\", line 772, in run_closure\n",
-      "    _threading_Thread_run(self)\n",
-      "  File \"D:\\Anaconda\\Lib\\threading.py\", line 1010, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_26308\\2491991929.py\", line 51, in launch_bot\n",
-      "  File \"C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_26308\\2491991929.py\", line 74, in update_logs_from_process\n",
-      "KeyError: 4\n",
-      "2025-10-31 09:52:42,602 [INFO]: Запускаю бот ecp_bot.py #1 на дату 09.10.2025.\n",
-      "2025-10-31 10:17:22,673 [INFO]: Запускаю бот ecp_bot.py #1 на дату 09.10.2025.\n"
+      "2025-11-01 14:12:00,103 [INFO]: Запускаю бот ecp_bot.py #1 на дату 01.11.2025.\n"
      ]
     }
    ],
@@ -287,8 +229,6 @@
     "import queue\n",
     "import logging\n",
     "import sys\n",
-    "import os\n",
-    "from datetime import datetime, timedelta\n",
     "import ctypes\n",
     "import re\n",
     "\n",
@@ -323,7 +263,13 @@
     "        \"\"\"\n",
     "    ]\n",
     "    logger.info(f\"Запускаю бот {script_name} #{bot_id} на дату {start_date}.\")\n",
-    "    process = subprocess.Popen(cmd, stdout=subprocess.PIPE, stderr=subprocess.STDOUT, universal_newlines=True)\n",
+    "    process = subprocess.Popen(cmd, \n",
+    "                            stdout=subprocess.PIPE, \n",
+    "                            stderr=subprocess.STDOUT, \n",
+    "                            universal_newlines=True,\n",
+    "                            encoding='utf-8',  # Explicitly set encoding\n",
+    "                            errors='replace',   # Replace invalid characters instead of crashing\n",
+    "                            )\n",
     "    tree.insert(\"\", \"end\", values=(bot_id, start_date, \"Работает\", start_date))  # Добавляем столбец с текущим днем\n",
     "    ctypes.windll.user32.MessageBeep(-1)\n",
     "    update_logs_from_process(process, bot_id, start_date)\n",
@@ -486,9 +432,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -500,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
