--- a/monitoring.ipynb
+++ b/monitoring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "06bbc542-a1ce-4b03-9aef-ab1dae6ed084",
    "metadata": {},
    "outputs": [
@@ -10,11 +10,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current dir: C:\\Users\\User\\Anaconda\n",
-      "Current version: v25.6.3-stable\n",
-      "Latest version: v25.6.3-stable\n",
+      "current dir: C:\\Users\\User\\Anaconda\\Github\n",
+      "Current version: v25.10.0-stable\n",
+      "Latest version: v25.10.0-stable\n",
       "Already at the latest version, skipping download\n",
-      "2025-08-10 13:23:07.890910\n"
+      "2025-11-01 11:30:29.252039\n"
      ]
     }
    ],
@@ -32,8 +32,8 @@
     "\n",
     "url=\"http://monitoring.mis66.ru/\"\n",
     "url2=\"http://10.3.224.196\"\n",
-    "username='NUZ1202020'#NUZ1202020 #LPU697\n",
-    "password='NUZ1202020'#NUZ1202020 #604540\n",
+    "username=os.getenv('MDMU_USERNAME_1')\n",
+    "password=os.getenv('MDMU_PASSWORD_1')\n",
     "today = date.today().strftime(\"%d.%m.%Y\")\n",
     "yesterday = (date.today() - timedelta(days=1)).strftime(\"%d.%m.%Y\")\n",
     "reports_to_check_and_send=['100.1']# <-----------------------------------\\\n",
@@ -150,7 +150,7 @@
     "    \n",
     "def delete_duplicate_and_send_report(report):\n",
     "    delete_report(report)\n",
-    "    duplicate_report(report)\n",
+    "    duplicate_report_from_yesterday(report)\n",
     "    send_report(report)\n",
     "\n",
     "def filter_report(report):\n",
@@ -207,18 +207,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "31f62577-e8fa-41ea-b87f-831af550aff7",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Login sequence completed\n",
-      "Filter all from yesterday sequence completed\n",
-      "Show all sequence completed\n"
+     "ename": "SessionNotCreatedException",
+     "evalue": "Message: session not created: probably user data directory is already in use, please specify a unique value for --user-data-dir argument, or don't use --user-data-dir; For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#sessionnotcreatedexception\nStacktrace:\n\tGetHandleVerifier [0x0x7ff70f8412e5+24661]\n\t(No symbol) [0x0x7ff70f7827e0]\n\t(No symbol) [0x0x7ff70f5d15fa]\n\t(No symbol) [0x0x7ff70f60fe2d]\n\t(No symbol) [0x0x7ff70f60a44b]\n\t(No symbol) [0x0x7ff70f660cbf]\n\t(No symbol) [0x0x7ff70f660420]\n\t(No symbol) [0x0x7ff70f6539d3]\n\t(No symbol) [0x0x7ff70f61936f]\n\t(No symbol) [0x0x7ff70f61a713]\n\tGetHandleVerifier [0x0x7ff70fbf324d+3899325]\n\tGetHandleVerifier [0x0x7ff70fc20662+4084690]\n\tGetHandleVerifier [0x0x7ff70f917bf9+903529]\n\tGetHandleVerifier [0x0x7ff70f91f3ce+934206]\n\t(No symbol) [0x0x7ff70f78c2eb]\n\t(No symbol) [0x0x7ff70f787ea4]\n\t(No symbol) [0x0x7ff70f788057]\n\t(No symbol) [0x0x7ff70f778fa5]\n\tBaseThreadInitThunk [0x0x7ff8b9577374+20]\n\tRtlUserThreadStart [0x0x7ff8bafbcc91+33]\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mSessionNotCreatedException\u001b[39m                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 16\u001b[39m\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# using dedicated profile dir:\u001b[39;00m\n\u001b[32m     14\u001b[39m options.add_argument(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m--user-data-dir=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprofile_directory\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m driver = \u001b[43mwebdriver\u001b[49m\u001b[43m.\u001b[49m\u001b[43mChrome\u001b[49m\u001b[43m(\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m=\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mservice\u001b[49m\u001b[43m=\u001b[49m\u001b[43mService\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexecutable_path\u001b[49m\u001b[43m=\u001b[49m\u001b[43mbinary_yandex_driver_file\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     17\u001b[39m driver.set_page_load_timeout(\u001b[32m10\u001b[39m)\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m100\u001b[39m):\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Python312\\Lib\\site-packages\\selenium\\webdriver\\chrome\\webdriver.py:47\u001b[39m, in \u001b[36mWebDriver.__init__\u001b[39m\u001b[34m(self, options, service, keep_alive)\u001b[39m\n\u001b[32m     44\u001b[39m service = service \u001b[38;5;28;01mif\u001b[39;00m service \u001b[38;5;28;01melse\u001b[39;00m Service()\n\u001b[32m     45\u001b[39m options = options \u001b[38;5;28;01mif\u001b[39;00m options \u001b[38;5;28;01melse\u001b[39;00m Options()\n\u001b[32m---> \u001b[39m\u001b[32m47\u001b[39m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\n\u001b[32m     48\u001b[39m \u001b[43m    \u001b[49m\u001b[43mbrowser_name\u001b[49m\u001b[43m=\u001b[49m\u001b[43mDesiredCapabilities\u001b[49m\u001b[43m.\u001b[49m\u001b[43mCHROME\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mbrowserName\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     49\u001b[39m \u001b[43m    \u001b[49m\u001b[43mvendor_prefix\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mgoog\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     50\u001b[39m \u001b[43m    \u001b[49m\u001b[43moptions\u001b[49m\u001b[43m=\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     51\u001b[39m \u001b[43m    \u001b[49m\u001b[43mservice\u001b[49m\u001b[43m=\u001b[49m\u001b[43mservice\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     52\u001b[39m \u001b[43m    \u001b[49m\u001b[43mkeep_alive\u001b[49m\u001b[43m=\u001b[49m\u001b[43mkeep_alive\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     53\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Python312\\Lib\\site-packages\\selenium\\webdriver\\chromium\\webdriver.py:71\u001b[39m, in \u001b[36mChromiumDriver.__init__\u001b[39m\u001b[34m(self, browser_name, vendor_prefix, options, service, keep_alive)\u001b[39m\n\u001b[32m     62\u001b[39m executor = ChromiumRemoteConnection(\n\u001b[32m     63\u001b[39m     remote_server_addr=\u001b[38;5;28mself\u001b[39m.service.service_url,\n\u001b[32m     64\u001b[39m     browser_name=browser_name,\n\u001b[32m   (...)\u001b[39m\u001b[32m     67\u001b[39m     ignore_proxy=options._ignore_local_proxy,\n\u001b[32m     68\u001b[39m )\n\u001b[32m     70\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m71\u001b[39m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mcommand_executor\u001b[49m\u001b[43m=\u001b[49m\u001b[43mexecutor\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptions\u001b[49m\u001b[43m=\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     72\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[32m     73\u001b[39m     \u001b[38;5;28mself\u001b[39m.quit()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Python312\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:263\u001b[39m, in \u001b[36mWebDriver.__init__\u001b[39m\u001b[34m(self, command_executor, keep_alive, file_detector, options, locator_converter, web_element_cls, client_config)\u001b[39m\n\u001b[32m    261\u001b[39m \u001b[38;5;28mself\u001b[39m._authenticator_id = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    262\u001b[39m \u001b[38;5;28mself\u001b[39m.start_client()\n\u001b[32m--> \u001b[39m\u001b[32m263\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mstart_session\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcapabilities\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    264\u001b[39m \u001b[38;5;28mself\u001b[39m._fedcm = FedCM(\u001b[38;5;28mself\u001b[39m)\n\u001b[32m    266\u001b[39m \u001b[38;5;28mself\u001b[39m._websocket_connection = \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Python312\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:366\u001b[39m, in \u001b[36mWebDriver.start_session\u001b[39m\u001b[34m(self, capabilities)\u001b[39m\n\u001b[32m    364\u001b[39m caps = _create_caps(capabilities)\n\u001b[32m    365\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m366\u001b[39m     response = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCommand\u001b[49m\u001b[43m.\u001b[49m\u001b[43mNEW_SESSION\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcaps\u001b[49m\u001b[43m)\u001b[49m[\u001b[33m\"\u001b[39m\u001b[33mvalue\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m    367\u001b[39m     \u001b[38;5;28mself\u001b[39m.session_id = response.get(\u001b[33m\"\u001b[39m\u001b[33msessionId\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    368\u001b[39m     \u001b[38;5;28mself\u001b[39m.caps = response.get(\u001b[33m\"\u001b[39m\u001b[33mcapabilities\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Python312\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:458\u001b[39m, in \u001b[36mWebDriver.execute\u001b[39m\u001b[34m(self, driver_command, params)\u001b[39m\n\u001b[32m    455\u001b[39m response = cast(RemoteConnection, \u001b[38;5;28mself\u001b[39m.command_executor).execute(driver_command, params)\n\u001b[32m    457\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[32m--> \u001b[39m\u001b[32m458\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43merror_handler\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcheck_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    459\u001b[39m     response[\u001b[33m\"\u001b[39m\u001b[33mvalue\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[38;5;28mself\u001b[39m._unwrap_value(response.get(\u001b[33m\"\u001b[39m\u001b[33mvalue\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[32m    460\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Python312\\Lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:233\u001b[39m, in \u001b[36mErrorHandler.check_response\u001b[39m\u001b[34m(self, response)\u001b[39m\n\u001b[32m    231\u001b[39m         alert_text = value[\u001b[33m\"\u001b[39m\u001b[33malert\u001b[39m\u001b[33m\"\u001b[39m].get(\u001b[33m\"\u001b[39m\u001b[33mtext\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    232\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m233\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
+      "\u001b[31mSessionNotCreatedException\u001b[39m: Message: session not created: probably user data directory is already in use, please specify a unique value for --user-data-dir argument, or don't use --user-data-dir; For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#sessionnotcreatedexception\nStacktrace:\n\tGetHandleVerifier [0x0x7ff70f8412e5+24661]\n\t(No symbol) [0x0x7ff70f7827e0]\n\t(No symbol) [0x0x7ff70f5d15fa]\n\t(No symbol) [0x0x7ff70f60fe2d]\n\t(No symbol) [0x0x7ff70f60a44b]\n\t(No symbol) [0x0x7ff70f660cbf]\n\t(No symbol) [0x0x7ff70f660420]\n\t(No symbol) [0x0x7ff70f6539d3]\n\t(No symbol) [0x0x7ff70f61936f]\n\t(No symbol) [0x0x7ff70f61a713]\n\tGetHandleVerifier [0x0x7ff70fbf324d+3899325]\n\tGetHandleVerifier [0x0x7ff70fc20662+4084690]\n\tGetHandleVerifier [0x0x7ff70f917bf9+903529]\n\tGetHandleVerifier [0x0x7ff70f91f3ce+934206]\n\t(No symbol) [0x0x7ff70f78c2eb]\n\t(No symbol) [0x0x7ff70f787ea4]\n\t(No symbol) [0x0x7ff70f788057]\n\t(No symbol) [0x0x7ff70f778fa5]\n\tBaseThreadInitThunk [0x0x7ff8b9577374+20]\n\tRtlUserThreadStart [0x0x7ff8bafbcc91+33]\n"
      ]
     }
    ],
@@ -226,7 +233,7 @@
     "#Initialization\n",
     "binary_yandex_driver_file = 'yandexdriver.exe'\n",
     "# Create the profile directory if it doesn't exist:\n",
-    "profile_directory = os.path.join(os.getcwd(), \"MonitoringUser\")\n",
+    "profile_directory = os.path.join(os.getcwd(), \"YandexUserMonitoring\")\n",
     "os.makedirs(profile_directory, exist_ok=True)\n",
     "options = webdriver.ChromeOptions()\n",
     "\n",
@@ -497,9 +504,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -511,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
