--- a/NOK.ipynb
+++ b/NOK.ipynb
@@ -73,7 +73,7 @@
     "def start_driver():\n",
     "    binary_yandex_driver_file = 'yandexdriver.exe'\n",
     "\n",
-    "    profile_directory = os.path.join(os.getcwd(), \"NOKUser\")\n",
+    "    profile_directory = os.path.join(os.getcwd(), \"YandexUserNOK\")\n",
     "    os.makedirs(profile_directory, exist_ok=True)\n",
     "    \n",
     "    options = webdriver.ChromeOptions()\n",
