--- a/add_usluga_v13.ipynb
+++ b/add_usluga_v13.ipynb
@@ -22,7 +22,7 @@
     }
    ],
    "source": [
-    "import requests, pickle, json, zipfile, dict2xml, xmltodict, os, shutil, re, petrovna\n",
+    "import requests, pickle, zipfile, dict2xml, xmltodict, os, shutil, re, petrovna\n",
     "from pathlib import Path\n",
     "from datetime import date, timedelta, datetime\n",
     "import datetime as dt\n",
@@ -94,7 +94,6 @@
     "fibroscan_allowed_diagnoses=['K70.0', 'K70.1', 'K70.2', 'K70.3', 'K70.4', 'K70.9', 'K71.7', 'K72.0', 'K72.1', 'K72.9', 'K74.0', 'K74.1', 'K74.2', 'K74.3', 'K74.4', 'K74.5', 'K74.6', 'K76.0', 'K76.7', 'E83', 'E83.0', 'E83.1', 'E83.2', 'E83.3', 'E83.4', 'E83.5', 'E83.8', 'E83.9', 'B18.0', 'B18.1', 'B18.2', 'B18.8', 'B18.9']\n",
     "def ecp_polis_from_snils(snils):\n",
     "    payload = { 'Person_Snils': snils, 'limit': '1' }\n",
-    "    #print(payload)\n",
     "    response = session.request(\"GET\", baseurl+'/?c=Person&m=getPersonSearchGrid', params=payload).json()\n",
     "    ecp_polis=response['data'][0]['Polis_Num']\n",
     "    return ecp_polis\n",
