--- a/ecp_bot_launcher.ipynb
+++ b/ecp_bot_launcher.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c53377cf-fb31-4b7a-992c-d6149cd87a64",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-01 14:12:00,103 [INFO]: Запускаю бот ecp_bot.py #1 на дату 01.11.2025.\n"
+      "2025-11-01 15:05:21,320 [INFO]: Запускаю бот ecp_bot.py #1 на дату 01.11.2025.\n",
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Python312\\Lib\\tkinter\\__init__.py\", line 1962, in __call__\n",
+      "    return self.func(*args)\n",
+      "           ^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_15204\\1505872383.py\", line 92, in select_bot\n",
+      "    item = tree.selection()[0]\n",
+      "           ~~~~~~~~~~~~~~~~^^^\n",
+      "IndexError: tuple index out of range\n"
      ]
     }
    ],
